--- a/main.css
+++ b/main.css
@@ -12,3 +12,10 @@
     height: 40px;
 }
 
+.pen {
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+    border: 2px solid black;
+}
+
