--- a/main.css
+++ b/main.css
@@ -27,10 +27,11 @@ h2 {
     height: 40px;
     border: 2px solid black;
     margin-top: 20px;
+    margin-left: 5px;
 }
 
 #palette {
-    margin-left: auto;
-    margin-right: auto;
+    display: flex;
+    justify-content: center;
 }
 
